# FireExtractor

./: .gitignore  README.md  coco_to_masks.py  pyproject.toml  requirements.txt  test.py  train.py
